# aoc-2024

./: .gitignore  Cargo.toml  README.md
benches/day04/: main.rs
benches/day05/: main.rs
